--- a/views/todo.ejs
+++ b/views/todo.ejs
@@ -12,13 +12,15 @@
         <h1>What's Going On?</h1>
         <ul = style= "list-style-type: none; display: inline-block;">
         <% amlist.forEach(function(am, index) { %>
-            <button id="butt" name="<%am%>" style= "display: block; width: 4rem; padding: .5rem; border: 1px solid lightgray;"> <%= am %></button>
+            <a href="localhost:8080/todo?'heure'=<%am%>">
+            <button id="butt" name="<%am%>" style= "display: block; width: 4rem; padding: .5rem; border: 1px solid lightgray;"> <%= am %></button></a>
         <% }); %>
         </ul>
         
         <ul = style= "list-style-type: none; display: inline-block;">
         <% pmlist.forEach(function(pm, index) { %>
-            <button id= "butt" name="<%pm%>" style= "display: block; width: 4rem; padding: .5rem; border: 1px solid lightgray;"> <%= pm %></button>
+            <a href="localhost:8080/todo?'heure'=<%pm%>">
+            <button id= "butt" name="<%pm%>" style= "display: block; width: 4rem; padding: .5rem; border: 1px solid lightgray;"> <%= pm %></button></a>
         <% }); %>
         </ul>
 
@@ -49,7 +51,7 @@
             </p>
         </form>
 
-        <script>
+        <!-- <script>
             // var ids = new Array(24);
             // ids = ["12:00am", "1:00am", "2:00am", "3:00am", "4:00am", "5:00am", "6:00am", "7:00am", "8:00am", "9:00am", "10:00am", "11:00am", "12:00pm", "1:00pm", "2:00pm", "3:00pm", "4:00pm", "5:00pm", "6:00pm", "7:00pm", "8:00pm", "9:00pm", "10:00pm", "11:00pm"];
             // var decoder = new Array(24)
@@ -58,10 +60,16 @@
             // {
             //     decoder[s] = s;
             // } object.onclick = function(){myScript};
+
+            var eventsFinal = new Array();
+            <% for(var c = 0; c < events.length; c++) { %>
+                eventsFinal[c] = <%=events[c]%>;
+            <%}%>
+
             document.getElementById("butt").onclick = function(check, events) 
             {
                 var ap = 'am';
-                var eventsFinal = new Array();
+                
                 for(var i = 0; i < events.length; i++)
                 {
                     if(events[i].aorp == 'p')
@@ -70,11 +78,11 @@
                     }
                     if(events[i].time + ':00' + ap == check)
                     {
-                        event.push(events[i]);
+                        eventFinal.push(events[i]);
                     }
                 }
                 document.getElementById("fill").innerHTML = eventsFinal;
             }
-        </script>
+        </script> -->
     </body>
 </html>
