--- a/views/todo.ejs
+++ b/views/todo.ejs
@@ -12,21 +12,21 @@
         <h1>What's Going On?</h1>
         <ul = style= "list-style-type: none; display: inline-block;">
         <% amlist.forEach(function(am, index) { %>
-            <a href="localhost:8080/todo?'heure'=<%am%>">
-            <button id="butt" name="<%am%>" style= "display: block; width: 4rem; padding: .5rem; border: 1px solid lightgray;"> <%= am %></button></a>
+            <a href="/todo/heure=<%am%>">
+            <button style= "display: block; width: 4rem; padding: .5rem; border: 1px solid lightgray;"> <%= am %></button></a>
         <% }); %>
         </ul>
         
         <ul = style= "list-style-type: none; display: inline-block;">
         <% pmlist.forEach(function(pm, index) { %>
-            <a href="localhost:8080/todo?'heure'=<%pm%>">
-            <button id= "butt" name="<%pm%>" style= "display: block; width: 4rem; padding: .5rem; border: 1px solid lightgray;"> <%= pm %></button></a>
+            <a href="/todo/heure=<%pm%>">
+            <button style= "display: block; width: 4rem; padding: .5rem; border: 1px solid lightgray;"> <%= pm %></button></a>
         <% }); %>
         </ul>
 
         <ul = style= "list-style-type: none; display: inline-block;">
             <div>
-            <p id = "fill"></p>
+            <!-- <p id = "fill"></p> --> <%=events%>
             </div>
         </ul>
 
