sevents is printedout for initial values but passing in setting is hard - is it :heure or heureequals and are am and pm being passed incolon

--- a/views/todo.ejs
+++ b/views/todo.ejs
@@ -30,7 +30,7 @@
                 <p style="font-size: 1.5rem; text-decoration: underline;">List of Events: </p>
                 <ul>
                 <% sevents.forEach(function(eve, index) { %>
-                    <li>
+                    <li style="text-align: left;">
             <!-- <p id = "fill"></p> --> <%=eve%>
                     </li>
                 <%});%>
